--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,7 +6,7 @@
 
         <div class="search-string">
           <input
-            class="input-area"
+            class="input-area color-input"
             id="js-input-event"
             type="text"
             name="query"
