--- a/src/sass/layout/_container.scss
+++ b/src/sass/layout/_container.scss
@@ -23,6 +23,10 @@ body {
   margin-top: 5px;
 }
 
+.container-before:hover {
+  opacity: 0.7;
+}
+
 @media screen and (min-width: 320px) {
   .container-list {
     display: grid;
